[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shravs_utils"
version = "0.1.0"
description = "A helper package to establish and keep utils that help bring all kinds of libraries related to agentic framework together"
readme = "README.rst"
authors = [
  {name = "Sheshank Joshi", email = "sheshank.joshi@gmail.com"}
]
maintainers = [
  {name = "Sheshank Joshi", email = "sheshank.joshi@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/SheshankJoshi/shravs_utils/issues"
changelog = "https://github.com/SheshankJoshi/shravs_utils/blob/master/changelog.md"
homepage = "https://github.com/SheshankJoshi/shravs_utils"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

